2015 companion styles heading background correction & generic heading margin management
- Add rule to remove heading background inherited by group request members name from group settings form ruleset.

- Additionally manage generic heading elements under item-body namespace: 2015 margins are far too large, reduce to 1em for grouped selectors; specific headings elements can then modify or inherit BP properties.

Fixes #6463 Props imath

git-svn-id: https://buddypress.svn.wordpress.org/trunk@9899 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/src/bp-templates/bp-legacy/css/twentyfifteen-rtl.css
+++ b/src/bp-templates/bp-legacy/css/twentyfifteen-rtl.css
@@ -639,6 +639,11 @@ http://codex.buddypress.org/themes/buddypress-companion-stylesheets/
 * @subsection 6.2 - Item Body: Global
 *-----------------------------------------------------------
 */
+#item-body h1, #item-body h2, #item-body h3, #item-body h4, #item-body h5, #item-body h6 {
+  margin: 1em 0; }
+  #item-body h1 a, #item-body h2 a, #item-body h3 a, #item-body h4 a, #item-body h5 a, #item-body h6 a {
+    border-bottom: 0; }
+
 /**
 *----------------------------------------------------
 * @subsection 6.2.1 - Item Body Groups
@@ -655,6 +660,9 @@ http://codex.buddypress.org/themes/buddypress-companion-stylesheets/
   background: #555;
   color: #fff;
   padding: 0.2em; }
+.groups #group-settings-form #request-list h4 {
+  background: none;
+  color: inherit; }
 
 .groups.edit-details #group-settings-form label {
   background: #555;
